# ultratab

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  README_BENCH.md  demo.js  demo_columnar.js  demo_throughput.js  demo_xlsx.js  index.js  package-lock.json  package.json  tsconfig.json  ultratab.d.ts
.github/workflows/: ci.yml
bench/: BENCHMARK_REPORT.md  config.js  run-all.js  run-csv.js  run-xlsx.js
bench/dataset/: generate-all.js  generate-csv.js  generate-xlsx.js
bench/lib/: metrics.js  run-bench.js
bench/reporters/: console.js  json.js  markdown.js
bench/runners/: csv-runner.js  xlsx-runner.js
examples/: csv-demo.js  data.csv
lib/: ultratab.js
src/: addon.cc  arena.cc  arena.h  batch_builder.cc  batch_builder.h  columnar_parser.cc  columnar_parser.h  csv_parser.cc  csv_parser.h  demo.ts  demo_columnar.ts  demo_throughput.ts  demo_xlsx.ts  pipeline_metrics.h  reader.cc  reader.h  ring_queue.h  simd_scanner.cc  simd_scanner.h  slice_parser.cc  slice_parser.h  streaming_columnar_parser.cc  streaming_columnar_parser.h  streaming_parser.cc  streaming_parser.h  streaming_xlsx_parser.cc  streaming_xlsx_parser.h  xlsx_parser.cc  xlsx_parser.h
src/bench/: config.ts  run-all.ts  run-csv.ts  run-xlsx.ts
src/bench/dataset/: generate-all.ts  generate-csv.ts  generate-xlsx.ts
src/bench/lib/: metrics.ts  run-bench.ts
src/bench/reporters/: console.ts  json.ts  markdown.ts
src/bench/runners/: csv-runner.ts  xlsx-runner.ts
src/examples/: csv-demo.ts
src/lib/: ultratab.ts
src/test/: arena_memory.test.ts  create_fixture.ts  create_fixture_xlsx.ts  fuzz_csv.test.ts  papaparse_parity.test.ts  pipeline.test.ts  typed_conversions.test.ts  xlsx_streaming.test.ts
test/: arena_memory.test.js  create_fixture.js  create_fixture_xlsx.js  fuzz_csv.test.js  papaparse_parity.test.js  pipeline.test.js  typed_conversions.test.js  xlsx_streaming.test.js
